[package]
name = "school-lib"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "school_library_cmdline_tools"
path = "src/main.rs"
[lib]
name = "school_library"
crate-type=['cdylib', 'rlib']

[dependencies]
chrono = "0.4.19"
tokio-cron-scheduler = "0.5.0"
regex = "1.5.4"
reqwest = {version="0.11.8", features=['rustls-tls', 'cookies', 'json']}
serde = "1.0.136"
serde_json = "1.0.73"
tokio = {version="1.15.0", features=['full']}
toml = "0.5.8"
once_cell = "1.10.0"