[package]
name = "school-lib"
version = "0.1.1"
edition = "2021"
[lib]
name = "school_library"
crate-type=['cdylib', 'rlib']

[dependencies]
chrono = "0.4.19"
regex = "1.5.4"
reqwest = {version="0.11.8", features=['rustls-tls', 'cookies', 'json', 'blocking']}
serde = "1.0.136"
serde_json = "1.0.73"
tokio = {version="1.15.0", features=['full']}
toml = "0.5.8"
pyo3 = { version = "0.16.1", features = ["extension-module"] }